--- a/Desafio7/package.json
+++ b/Desafio7/package.json
@@ -20,6 +20,7 @@
       "react-native-reanimated": "^1.7.0",
       "react-native-safe-area-context": "^0.6.2",
       "react-native-screens": "^2.0.0-alpha.32",
+      "react-native-snap-carousel": "^3.8.4",
       "react-native-vector-icons": "^6.6.0",
       "react-navigation": "^4.0.10",
       "react-navigation-stack": "^2.0.16",
