--- a/Desafio7/package.json
+++ b/Desafio7/package.json
@@ -12,6 +12,7 @@
    "dependencies": {
       "@react-native-community/masked-view": "^0.1.6",
       "axios": "^0.19.2",
+      "immer": "^5.3.2",
       "polished": "^3.4.4",
       "prop-types": "^15.7.2",
       "react": "16.9.0",
@@ -24,7 +25,11 @@
       "react-native-vector-icons": "^6.6.0",
       "react-navigation": "^4.0.10",
       "react-navigation-stack": "^2.0.16",
+      "react-redux": "^7.1.3",
       "reactotron-react-native": "^4.0.3",
+      "reactotron-redux": "^3.1.2",
+      "reactotron-redux-saga": "^4.2.3",
+      "redux": "^4.0.5",
       "styled-components": "^5.0.0"
    },
    "devDependencies": {
