--- a/Desafio7/package.json
+++ b/Desafio7/package.json
@@ -13,6 +13,7 @@
       "@react-native-community/masked-view": "^0.1.6",
       "axios": "^0.19.2",
       "immer": "^5.3.2",
+      "intl": "^1.2.5",
       "polished": "^3.4.4",
       "prop-types": "^15.7.2",
       "react": "16.9.0",
