--- a/Desafio7/package.json
+++ b/Desafio7/package.json
@@ -24,13 +24,14 @@
       "react-native-screens": "^2.0.0-alpha.32",
       "react-native-snap-carousel": "^3.8.4",
       "react-native-vector-icons": "^6.6.0",
-      "react-navigation": "^4.0.10",
+      "react-navigation": "^4.1.0",
       "react-navigation-stack": "^2.0.16",
       "react-redux": "^7.1.3",
       "reactotron-react-native": "^4.0.3",
       "reactotron-redux": "^3.1.2",
       "reactotron-redux-saga": "^4.2.3",
       "redux": "^4.0.5",
+      "redux-saga": "^1.1.3",
       "styled-components": "^5.0.0"
    },
    "devDependencies": {
